# nostr-multi-platform

./: .file-size-ignore  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  WIP.md  deny.toml  justfile  vercel.json
crates/chirp-repl/: Cargo.toml
crates/chirp-repl/src/: actions.rs  actions_tests.rs  app.rs  command.rs  lib.rs  main.rs  profiles.rs  render.rs  session.rs  wire.rs
crates/chirp-tui/: AGENTS.md  Cargo.toml
crates/chirp-tui/src/: app.rs  bridge.rs  commands.rs  feature_snapshot.rs  features.rs  input.rs  lib.rs  main.rs  render_intents.rs  runtime.rs  runtime_commands.rs  snapshot.rs  timeline.rs
crates/chirp-tui/tests/: e2e.rs
crates/fixture-todo-core/: Cargo.toml
crates/fixture-todo-core/src/: lib.rs
crates/nmp-android-ffi/: Cargo.toml  build.rs
crates/nmp-android-ffi/src/: lib.rs  marmot.rs  podcast.rs
crates/nmp-app-gallery/: Cargo.toml
crates/nmp-app-gallery/src/: android.rs  lib.rs
crates/nmp-app-template/: Cargo.toml
crates/nmp-app-template/examples/: minimal_app.rs  validate_claim_profile.rs
crates/nmp-app-template/src/: builder.rs  lib.rs  op_feed_defaults.rs  runtimes.rs  topic_articles.rs
crates/nmp-app-template/tests/: builder_typestate_test.rs  op_feed_defaults_test.rs  op_feed_repost_hydration_test.rs  register_defaults.rs
crates/nmp-cli/: Cargo.toml
crates/nmp-cli/registry/: registry.toml
crates/nmp-cli/src/: component.rs  doctor.rs  export.rs  gen.rs  init.rs  main.rs  manifest_edit.rs  upgrade.rs
crates/nmp-cli/templates/: README.md.tmpl  app_cargo.toml.tmpl  lib.rs.tmpl  nmp.toml.tmpl  shell.rs.tmpl  workspace_cargo.toml.tmpl
crates/nmp-cli/tests/: component.rs  component_registry_metadata.rs  e2e.rs  e2e_tui.rs  export.rs  init.rs  update.rs  upgrade.rs
crates/nmp-codegen/: Cargo.toml
crates/nmp-codegen/src/: ffi_gen.rs  generate.rs  lib.rs  main.rs  manifest.rs  swift.rs  swift_projections_registry.rs  workspace.rs
crates/nmp-codegen/tests/: determinism.rs  ffi_dispatch.rs  fixture_zero_diff.rs  swift_codegen_regression.rs  swift_render_identity.rs
crates/nmp-content/: Cargo.toml
crates/nmp-content-fixtures/: Cargo.toml
crates/nmp-content-fixtures/src/: dto.rs  embed_store.rs  identities.rs  lib.rs  project.rs  wire_fixtures.rs
crates/nmp-content-fixtures/tests/: bundle.rs  wire_fixtures.rs
crates/nmp-content/schema/: content_tree.fbs
crates/nmp-content/src/: context.rs  embed_registry.rs  grouper.rs  lib.rs  markdown.rs  mode.rs  regex_set.rs  segment.rs  tokenizer.rs
crates/nmp-content/tests/: auto_mode.rs  embed_registry.rs  golden_content_wire_fixtures.rs  tokenizer_props.rs  wire_projection.rs
crates/nmp-core/: Cargo.toml
crates/nmp-core/examples/: outbox_perf.rs
crates/nmp-core/schema/: nmp_update.fbs
crates/nmp-core/src/: actor.rs  app.rs  bunker_hook.rs  capability_socket.rs  codegen_schema.rs  display.rs  ffi.rs  ffi_guard.rs  keepalive.rs  kernel_action.rs  kernel_reducer.rs  kinds.rs  lib.rs  nip19.rs  nip21.rs  relay.rs  relay_protocol.rs  relay_worker.rs  remote_signer.rs  slots.rs  stable_hash.rs  tags.rs  update_envelope.rs  util.rs
crates/nmp-core/tests/: nip19_nip21.rs  nip_tag_conformance.rs  publish_engine.rs  publish_engine_followup.rs  publish_engine_relay_reasons.rs  publish_offline_intent.rs  substrate_registry.rs
crates/nmp-coverage-gate/: Cargo.toml
crates/nmp-coverage-gate/src/: lib.rs
crates/nmp-desktop/: Cargo.toml
crates/nmp-desktop/src/: app.rs  bridge.rs  main.rs  message.rs  render.rs  snapshot.rs
crates/nmp-desktop/tests/: live_feed.rs
crates/nmp-feed/: Cargo.toml
crates/nmp-feed/schema/: feed_home.fbs
crates/nmp-feed/src/: lib.rs  registry.rs  root_indexed.rs  types.rs  window.rs
crates/nmp-ffi/: Cargo.toml
crates/nmp-ffi/src/: action.rs  active_account_handle_tests.rs  capability.rs  event_by_id_tests.rs  event_observer.rs  feed.rs  identity.rs  lib.rs  lifecycle.rs  publish.rs  raw_event_tap.rs  routing_trace.rs  signer_broker.rs  snapshot.rs  testing.rs  timeline.rs  wallet.rs
crates/nmp-highlighter-core/: Cargo.toml
crates/nmp-highlighter-core/src/: lib.rs  placeholders.rs
crates/nmp-highlighter-core/tests/: smoke.rs
crates/nmp-kinds/: Cargo.toml
crates/nmp-kinds/src/: lib.rs
crates/nmp-marmot/: Cargo.toml
crates/nmp-marmot/src/: credential_store.rs  fetch.rs  ffi.rs  identity.rs  interest.rs  lib.rs  service.rs  tests.rs
crates/nmp-network/: Cargo.toml
crates/nmp-network/src/: browser_driver.rs  keepalive.rs  lib.rs  relay_protocol.rs  role.rs
crates/nmp-nip01/: Cargo.toml
crates/nmp-nip01/schema/: op_feed.fbs  timeline_snapshot.fbs
crates/nmp-nip01/src/: build.rs  decode.rs  domain.rs  kinds.rs  lib.rs  meta_timeline.rs  note_relations.rs  profile_display.rs  timeline_projection.rs  typed_wire.rs  view.rs  visible_relations.rs
crates/nmp-nip01/tests/: domain_route_and_list.rs  golden_wire_fixtures.rs  op_feed_golden_wire.rs  timeline_projection_relations.rs
crates/nmp-nip02/: Cargo.toml
crates/nmp-nip02/src/: active_follow_set.rs  lib.rs  projection.rs
crates/nmp-nip02/tests/: dispatch_integration.rs
crates/nmp-nip17/: Cargo.toml
crates/nmp-nip17/src/: action.rs  display.rs  dm_relay_cache.rs  dm_relay_list.rs  dm_runtime.rs  dm_send.rs  inbox.rs  kind10050_parser.rs  lib.rs
crates/nmp-nip18/: Cargo.toml
crates/nmp-nip18/src/: lib.rs
crates/nmp-nip22/: Cargo.toml
crates/nmp-nip22/src/: build.rs  decode.rs  domain.rs  kinds.rs  lib.rs  meta_timeline.rs  view.rs
crates/nmp-nip23/: Cargo.toml
crates/nmp-nip23/src/: build.rs  decode.rs  domain.rs  kinds.rs  lib.rs
crates/nmp-nip23/tests/: builder_round_trip.rs  builder_validates_required.rs  decode_full_article.rs  decode_minimal_article.rs  decode_missing_d_tag_returns_none.rs  decode_tag_semantics.rs  decode_wrong_kind_returns_none.rs  domain_index_by_author.rs  naddr_resolution.rs
crates/nmp-nip29/: Cargo.toml
crates/nmp-nip29/src/: group_id.rs  interest.rs  kinds.rs  lib.rs  moderation.rs  (+2 more)
crates/nmp-nip42/: Cargo.toml
crates/nmp-nip42-types/: Cargo.toml
crates/nmp-nip44/: Cargo.toml
(+2870 files in other folders)
