[workspace]
members = [
    "apps/chirp/nmp-app-chirp",
    "apps/fixture/nmp-app-fixture",
    "apps/podcast/nmp-app-podcast",
    "apps/podcast/podcast-core",
    "apps/podcast/podcast-feeds",
    "apps/podcast/podcast-audio",
    "apps/podcast/podcast-rag",
    "apps/podcast/podcast-llm",
    "crates/fixture-todo-core",
    "crates/nmp-cli",
    "crates/nmp-codegen",
    "crates/nmp-content",
    "crates/nmp-content-fixtures",
    "crates/nmp-core",
    "crates/nmp-highlighter-core",
    "crates/nmp-marmot",
    "crates/nmp-nip01",
    "crates/nmp-nip22",
    "crates/nmp-nip23",
    "crates/nmp-nip29",
    "crates/nmp-nip42",
    "crates/nmp-nip42-types",
    "crates/nmp-nip51",
    "crates/nmp-nip57",
    "crates/nmp-nip59",
    "crates/nmp-nip77",
    "crates/nmp-nostr-lmdb",
    "crates/nmp-nwc",
    "crates/nmp-reactions",
    "crates/nmp-repl",
    "crates/nmp-signer-broker",
    "crates/nmp-signer-iface",
    "crates/nmp-signers",
    "crates/nmp-testing",
    "crates/nmp-threading",
    "crates/nmp-desktop",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

# Shared third-party dependency versions. Declare the *version* and the
# default-features posture here only; each member crate adds its own
# `features = [...]` at the use site via `dep.workspace = true`, since the
# feature sets diverge per crate (e.g. nostr: nip04/nip44/nip49/std vary).
# Single source of truth for versions prevents duplicate-version builds when
# one crate's manifest drifts.
#
# CRITICAL — `default-features`: a bare `dep = "x.y"` entry implies
# `default-features = true`, and Cargo *silently ignores* a member-side
# `default-features = false` when the workspace entry has defaults on. So
# `rustls`/`tungstenite` are declared with `default-features = false` here:
# every member uses `features = ["ring"]` (NOT the `aws-lc-rs` default crypto
# provider). A bare entry pulls aws-lc-rs + a C toolchain into the build.
#
# TODO: `nostr` is left as a bare entry because its feature posture is split
#   across the workspace — most crates want defaults ON, `nmp-marmot` /
#   `nmp-nostr-lmdb` want `default-features = false, features = ["std"]`.
#   Switching the workspace entry to `default-features = false` would require
#   adding explicit feature lists to the defaults-on crates in the same pass;
#   deferred to keep this commit scoped. Feature unification keeps `std` on
#   regardless, so this is a clarity gap, not a build-correctness one.
#
# TODO: migrate the remaining crates to `*.workspace = true`. Done so far:
#   nmp-core, nmp-nip01, nmp-marmot, nmp-signers, nmp-nip77.
#   Still copy-pasting versions: nmp-nip59, nmp-nwc, nmp-nostr-lmdb,
#   nmp-signer-broker, nmp-testing, nmp-repl, nmp-content, nmp-reactions,
#   nmp-threading, nmp-nip22/23/29/42/51/57, nmp-cli, nmp-codegen, etc.
[workspace.dependencies]
nostr = "0.44"
serde = "1.0"
serde_json = "1.0"
rustls = { version = "0.23", default-features = false }
tungstenite = { version = "0.24", default-features = false }
# Secret-material zeroization. `derive` enables `#[derive(ZeroizeOnDrop)]`.
zeroize = { version = "1", features = ["derive"] }
