[package]
name = "chirp-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone diagnostic Rust REPL for the Chirp Nostr client."

[lib]
name = "chirp_repl"
path = "src/lib.rs"

[[bin]]
name = "chirp-repl"
path = "src/main.rs"

[dependencies]
nmp-core = { path = "../nmp-core" }
nostr = { version = "0.44", default-features = false, features = ["std"] }
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde_json = "1.0"
