[package]
name = "chirp-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone diagnostic Rust REPL for the Chirp Nostr client."

[lib]
name = "chirp_repl"
path = "src/lib.rs"

[[bin]]
name = "chirp-repl"
path = "src/main.rs"

[dependencies]
nmp-app-chirp = { path = "../../apps/chirp/nmp-app-chirp", default-features = false }
nmp-core = { path = "../nmp-core", features = ["android-ffi"] }
nostr = { version = "0.44", default-features = false, features = ["std"] }
serde_json = "1.0"
