# Standalone workspace root (empty [workspace] table) so the parent workspace
# at ../../Cargo.toml does NOT pull this crate in. The parent `members` list is
# explicit (no glob); this detachment keeps Android territory file-disjoint and
# avoids editing the shared root manifest.
[workspace]

[package]
name = "nmp-android-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "nmp_android_ffi"
crate-type = ["cdylib"]

[dependencies]
# Path-dep on the SAME kernel the iOS app consumes.
nmp-core = { path = "../nmp-core" }
# C-ABI surface owner (extracted from `nmp-core::ffi` in step 11-final of
# `docs/architecture/crate-boundaries.md` §5). The JNI shim consumes the
# `nmp_app_*` Rust paths through this crate.
nmp-ffi = { path = "../nmp-ffi", features = ["android-ffi"] }
# Android registers the same Chirp modular timeline observer as iOS, but keeps
# deferred post-v1 surfaces (Marmot/wallet) out of the Android .so.
nmp-app-chirp = { path = "../../apps/chirp/nmp-app-chirp", default-features = false }
jni = "0.21"
