[package]
name = "nmp-content-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Offline signed-event + pre-tokenized DTO bundle generator (pre-T93 staging format; NmpGallery showcase deleted in T111 closure). Retained as test-fixture generator for nmp-content scenarios."

[lib]
name = "nmp_content_fixtures"

[[bin]]
name = "build-bundle"
path = "src/bin/build-bundle.rs"

[dependencies]
nmp-content = { path = "../nmp-content" }
nmp-core = { path = "../nmp-core" }
nmp-signers = { path = "../nmp-signers" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
nmp-core = { path = "../nmp-core" }
