[package]
name = "nmp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nmp_core"
crate-type = ["staticlib", "rlib"]

[features]
# `native` gates all I/O-bound code: the C-ABI FFI layer, the actor *runtime*
# (run_actor + dispatch + relay management + tick + LNURL worker + DM /
# publish executors), relay_worker (tungstenite TCP), LMDB store backend, and
# the sync HTTP client (ureq/LNURL fetcher). Enabled by default so existing
# native consumers see no change.
#
# Disable with `default-features = false` to compile only the pure kernel +
# `ActorCommand` data type + substrate traits for wasm32 or other no-std-io
# targets. V-01 Phase 1c (PR #339-ish): the kernel speaks the wire-transport-
# agnostic [`kernel::RelayFrame`] enum; `tungstenite::Message` is named only
# inside the gated `relay_worker` module. The `ActorCommand` enum + observer
# types + `NOSTRCONNECT_DEFAULT_RELAY_URL` stay always-compiled so
# `publish/action.rs` and every NIP-crate `ActionModule::execute` impl can
# name them without `native`. Only the actor *runtime* that consumes them is
# gated.
default = ["native"]
# I/O layer — native platforms (Linux, macOS, iOS, Android).
# Gates: tungstenite, ureq, mio, rustls, heed, nostr-database, nmp-nostr-lmdb,
# and the chrono/clock feature (wall-clock reads via the OS).
native = [
    "dep:tungstenite",
    "dep:ureq",
    "dep:mio",
    "dep:rustls",
    "dep:heed",
    "dep:nostr-database",
    "dep:nmp-nostr-lmdb",
    "chrono/clock",
]
# V-38: the `wallet` feature was deleted; the NIP-47 NWC wallet stack
# (runtime + action modules + status projection) moved to `crates/nmp-nip47`.
# The kernel no longer depends on `nmp-nwc`; that edge inverted to
# `nmp-nip47 → nmp-nwc`. See `docs/architecture/crate-boundaries.md` §5
# step 7. The `nmp_app_wallet_*` FFI symbols stay on `nmp-core::ffi::wallet`
# as thin shims over `dispatch_action` (no `nmp-nwc` dep at the kernel boundary).
# Expose actor internals for live-bench harnesses and integration test binaries.
# Never enable in production builds.
test-support = []
# Enable the LMDB-backed EventStore. Pulls in the NMP-local nostr-lmdb fork
# (with env-injection seam) + heed + nostr-database. ADR-0011, ADR-0012.
# lmdb-backend implies native (LMDB requires OS file I/O).
lmdb-backend = ["dep:nmp-nostr-lmdb", "dep:heed", "dep:nostr-database", "native"]
# Re-export all FFI entry-points via Rust paths so nmp-android-ffi can call them
# through the rlib dependency (extern "C" declarations are opaque to Rust CGU
# compilation — the android-ffi feature is the portable fix).
# android-ffi implies native (the FFI layer is C-ABI, native-only).
android-ffi = ["native"]
# V6 Stage 1 — Swift `Decodable` emitter. Adds `schemars::JsonSchema` derives
# to the projection types `nmp-codegen` reflects into Swift, and exposes the
# `dump_projection_schemas` binary that walks them. OFF by default — production
# builds never link `schemars` or the schema-export helper module. Enable with:
#   cargo run -p nmp-core --features codegen-schema --bin dump_projection_schemas
# (consumed by `nmp-codegen gen swift` in CI and at developer-loop time).
# See `docs/architecture-audit/v6-codegen-plan.md` §3b for the design rationale.
codegen-schema = ["dep:schemars"]

[dependencies]
bech32 = "0.11"
# `clock` feature reads the OS wall-clock; gated behind `native` so wasm32
# builds compile (wasm has no OS clock without a js-sys shim).
chrono = { version = "0.4", default-features = false }
# Insertion-ordered hash map. Powers `substrate::bounded::BoundedMessageMap` —
# the cap-and-evict-oldest primitive every long-lived per-projection message
# store now backs onto so memory and per-tick snapshot serialisation are
# bounded regardless of session length. Version pinned to match the
# transitively-resolved `indexmap 2.14` already in the lockfile (no new
# dependency tree branch).
indexmap = "2.14"
nmp-nip42-types = { path = "../nmp-nip42-types" }
# NIP-59 gift-wrap free functions (`gift_wrap` / `unwrap_gift_wrap`). Consumed
# by the `ActorCommand::SendGiftWrappedDm` arm to seal+wrap NIP-17 DM rumors on
# the actor thread. Kernel → protocol-module direction (ADR-0009 precedent:
# `nmp-nwc`); `nmp-nip59` is substrate-grade (carries no app/protocol nouns per
# its own crate docs) and stays kernel-agnostic — the dependency is one-way.
nmp-nip59 = { path = "../nmp-nip59" }
nostr = { workspace = true, features = ["nip44", "nip59"] }
# V-38: the `nmp-nwc` dep was deleted from `nmp-core`. NIP-47 is consumed
# exclusively by `crates/nmp-nip47` post-V-38.
nmp-signer-iface = { path = "../nmp-signer-iface" }
# native-only I/O deps — optional, gated behind the `native` feature.
# mio: OS event loop (epoll/kqueue) used by relay_worker for non-blocking I/O.
mio = { version = "1", features = ["os-ext", "os-poll"], optional = true }
# rustls: TLS for relay WebSocket connections (native relay_worker only).
rustls = { workspace = true, default-features = false, features = ["ring"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
# tungstenite: native WebSocket over TCP (relay_worker and actor). optional=true
# so wasm32 builds (which use web_sys::WebSocket) compile without it.
tungstenite = { workspace = true, default-features = false, features = ["handshake", "rustls-tls-webpki-roots"], optional = true }
# Sync HTTP client used by the LNURL fetcher worker spawned from the
# `ActorCommand::FetchLnurlInvoice` arm (NIP-57 zaps, ADR-0024 minimum-viable
# path). `tls` rides the same rustls graph the rest of nmp-core uses
# (rustls + webpki-roots, ring crypto provider). `json` enables `Response::into_json`
# for the LNURL-pay endpoint responses. No async runtime is introduced — the
# worker runs on `std::thread::spawn` and sends a follow-up `ActorCommand`
# back to the actor through a cloned `Sender<ActorCommand>` (D8: no blocking
# on the actor thread). optional=true — native-only (wasm uses fetch() instead).
ureq = { version = "2", default-features = false, features = ["tls", "json"], optional = true }
# Lightweight logging facade. Used by the NIP-17 DM send path to emit a
# diagnostic `warn!` when the recipient's kind:10050 DM-relay list is not yet
# cached and the send falls back to the configured Content relays — making the
# routing gap visible in logs rather than failing delivery silently. Already in
# the lockfile as a transitive of `nostr`; declaring it direct adds nothing new.
tracing = "0.1"
zeroize = { workspace = true }
# V6 Stage 1 — JSON Schema generation for the Swift `Decodable` emitter
# (`nmp-codegen gen swift`). Optional and gated behind `codegen-schema` so
# production builds (which never run the emitter) link no `schemars` /
# `schemars_derive` code. The derive is added side-by-side with `Serialize`
# via `#[cfg_attr(feature = "codegen-schema", derive(schemars::JsonSchema))]`
# on each projection type the emitter reflects.
schemars = { version = "0.8", optional = true }

# LMDB backend — feature-gated. The fork at crates/nmp-nostr-lmdb carries the
# env-injection seam (ADR-0011); heed / nostr-database are the underlying
# storage and event-encoding crates.
nmp-nostr-lmdb = { path = "../nmp-nostr-lmdb", optional = true }
heed = { version = "0.20", default-features = false, features = ["read-txn-no-tls"], optional = true }
nostr-database = { version = "0.44", default-features = false, features = ["flatbuf"], optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"

# NIP golden-tag conformance suite. Drives the (crate-private) command handlers
# through the `test-support` facade (`nmp_core::testing::ConformanceHarness`),
# so the test target only builds when that feature is enabled. Verify with:
#   cargo test -p nmp-core --features test-support --test nip_tag_conformance
[[test]]
name = "nip_tag_conformance"
path = "tests/nip_tag_conformance.rs"
required-features = ["test-support"]
